Fix card spacing

--- a/stylesheets/settings-view.less
+++ b/stylesheets/settings-view.less
@@ -310,9 +310,6 @@
         text-decoration: underline;
       }
     }
-    .btn-group {
-      margin-bottom: @component-padding*3;
-    }
   }
 
   .packages {
